# Manajemen-Sistem-Kepegawaian-K5

./: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
laporan/: laporan.md
src/: AdminLogin.jsx  AdminLogin.vue  App.css  App.jsx  App.vue
src-tauri/: .env  .gitignore  Cargo.toml  kepegawaian.db  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/app/domain/: admin.rs  employee.rs  jabatan.rs  mod.rs  presensi.rs  presensi_summary.rs
src-tauri/src/app/infra/: db.rs  employee_repo.rs  mod.rs  supabase.rs
src-tauri/src/app/services/: admin_service.rs  employee_service.rs  jabatan_service.rs  mod.rs  presensi_service.rs
