[package]
name = "msk-kepegawaian"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "msk_kepegawaian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
thiserror = "2"

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenvy = "0.15"

urlencoding = "2"
